<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="imagem_do_pacote">Imagem do Pacote</string>
    <string name="numero_cartao">Número do Cartão</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="pagamento_orientacao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no Cartão</string>
    <string name="mascara_nome_cartao">qwertyuiopasdfghjklçzxcvbnmQWERTYUIOPASDFGHJKLÇZXCVBNM\u0020</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucessso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="banner_inicial_do_resumo">Banner Inicial do Resumo</string>
</resources>
